--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -8,7 +8,8 @@
 
             <div class="col-10 col-sm-5 col-md-4 offset-md-1 col-lg-3 offset-lg-1">
                 <h1 class="title_level_1">Contact</h1>
-                <a class="btn_dark_grey" href="contact.html">Contactez nous
+                <a class="btn_dark_grey" href="contact.html">
+                    {{ i18n "contactUs" }}
                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                          viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
                     <style type="text/css">
@@ -20,7 +21,8 @@
             </div>
 
             <div class="col-2 col-sm-7 col-md-1 col-lg-1">
-                <a class="liens_sociaux twitter" href="https://twitter.com/Sogilis?lang=fr">
+                {{ with $.Site.Params.twitter }}
+                <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
@@ -34,8 +36,14 @@
                         C25.5,4.7,26.4,3.7,27.1,2.6z"/>
                     </svg>
                 </a>
+                {{ end }}
+
+                {{ if (and $.Site.Params.twitter $.Site.Params.linkedin) }}
                 <br>
-                <a class="liens_sociaux" href="https://www.linkedin.com/company/sogilis/">
+                {{ end }}
+
+                {{ with $.Site.Params.linkedin }}
+                <a class="liens_sociaux" href="{{ . }}">
                     <svg version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                          x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
@@ -48,6 +56,7 @@
                         h5.4V7.8H0.3V24z"/>
                     </svg>
                 </a>
+                {{ end }}
             </div>
 
             <div class="col-10 offset-1 col-sm-6 offset-sm-1 col-md-5 offset-md-2 offset-lg-0 col-lg-3 adresses">
@@ -71,34 +80,36 @@
 
         <div class="row liens_pages">
             <div class="col-11 offset-1  col-sm-7 col-md-5 offset-md-1 col-lg-3 offset-lg-2">
-                <h1 class="title_level_1">Services</h1>
+                <h1 class="title_level_1">{{ i18n "services" }}</h1>
                 <ul>
-                    <li><a href="services-applications-cloud-native.html" class="liens_text">Applications Cloud Natives</a></li>
-                    <li><a href="services-embarques-et-iot.html" class="liens_text">Logiciels Embarqués & IoT</a></li>
-                    <li><a href="services-logiciels-critiques.html" class="liens_text">Logiciels Critiques</a></li>
+                    <li><a href="services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
+                    <li><a href="services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
+                    <li><a href="services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
                 </ul>
             </div>
 
             <div class="col-11 offset-1  col-sm-5 col-md-4 offset-md-0 col-lg-3 offset-lg-1">
-                <h1 class="title_level_1">L'Entreprise</h1>
+                <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
                 <ul>
-                    <li><a href="vision.html" class="liens_text">Notre Vision</a></li>
-                    <li><a href="emplois.html" class="liens_text">Emplois</a></li>
-                    <li><a href="" class="liens_text">Blog</a></li>
+                    <li><a href="vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
+                    <li><a href="emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
+                    <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
                 </ul>
             </div>
         </div>
+
         <div class="row">
             <div class="col-12">
                 <div class="trait_gris_clair"></div>
             </div>
         </div>
+
         <div class="row subfooter  justify-content-between">
             <div class="col-9 col-sm-8 col-md-4 col-lg-4">
-                <p class="text_description">Sogilis - Tous Droits Réservés - 2019</p>
+                <p class="text_description">{{ i18n "allRightsReserved" }}</p>
             </div>
             <div class="col-2 col-sm-3 col-md-2 col-lg-1">
-                <a href="">Mentions Légales</a>
+                <a href="">{{ i18n "LegalInfo" }}</a>
             </div>
         </div>
     </div>
@@ -120,19 +131,19 @@
         <nav class="mainMenuMobile">
         <ul>
           <li>
-            <a href="services-applications-cloud-native.html">Applications Cloud Natives</a>
+            <a href="services-applications-cloud-native.html">{{i18n "cloudNativeApplications" }}</a>
           </li>
           <li>
-            <a href="services-embarques-et-iot.html">Logiciels Embarqués & IoT</a>
+            <a href="services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
           </li>
           <li>
-            <a href="services-logiciels-critiques.html">Logiciels Critiques</a>
+            <a href="services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
           </li>
            <li>
-            <a href="vision.html">Notre Vision</a>
+            <a href="vision.html">{{ i18n "ourVision" }}</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">{{ i18n "contact" }}</a>
           </li>
         </ul>
       </nav>
